[project]
name = "proj"
version = "0.0"
description = ""
authors = [
    {name = "nimi", email = "correo"},
]
dependencies = [
    "amaranth >= 0.4.4dev1, < 0.6",
    "rain >= 0.1",
]
requires-python = ">=3.8"
license = {text = "BSD-2-Clause"}

[project.optional-dependencies]
build = [
    "amaranth-boards",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
